# AmberAgent

./: .gitignore  AGENTS.md  AMBER_VS_RIKKAHUB_SIMILARITY.md  AmberAgent-Analysis.md  AmberAgent-Harness-边界审查与建议.md  CLAUDE.md  HANDOFF_STREAMING_RENDERING.md  PULSE_HANDOFF.md  README.md  README_ZH_CN.md  README_ZH_TW.md  REFACTOR_EXECUTION_ROADMAP.md  REFACTOR_PLAN_AGENT_KERNEL.md  REFACTOR_SESSION_PROMPT.md  build.gradle.kts  settings.gradle.kts  今日看板-产品方案-v0.1.md  今日看板-开发交接.md  飞书工作画像-2026-05-05.md
.claude/: launch.json  settings.local.json
.github/workflows/: legacy-package-guard.yml  native-build-check.yml  release.yml
ai/: README.md  build.gradle.kts
app/: build.gradle.kts  compose_compiler_config.conf
app/baselineprofile/: build.gradle.kts
app/schemas/app.amber.agent.data.db.AppDatabase/: 1.json  2.json  3.json  4.json  5.json
app/schemas/me.rerere.rikkahub.data.db.AppDatabase/: 18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
common/: build.gradle.kts
config/: check-legacy-package.sh  check-refactor-state.sh  legacy-package-allowlist.txt
core/agent-runtime/: build.gradle.kts
core/agent-runtime-impl/: build.gradle.kts
core/agent-store-room/: build.gradle.kts
core/ai-prompts/: build.gradle.kts
core/ai/api/: build.gradle.kts
core/app-infra/: build.gradle.kts
core/automation/api/: build.gradle.kts
core/context/api/: build.gradle.kts
core/event/: build.gradle.kts
core/memory/api/: build.gradle.kts
core/model/: build.gradle.kts
core/settings/: build.gradle.kts
core/usage/: build.gradle.kts
docs/: AI_HANDOFF_ZONES.md  AMBERAGENT_HANDOFF_2026-05-04.md  AMBERAGENT_HANDOFF_2026-05-15.md  CHAT_UI_REFRESH_2026-05-23.html  CHAT_UI_REFRESH_2026-05-23_v2.html  CLAUDE_AUDIT_PHASE0_2026-05-05.md  CLAUDE_STATUS.md  CLAUDE_UI_HANDOFF_2026-05-05.md  CODEX_AUDIT_PHASE0_2026-05-05.md  CODEX_HANDOFF_2026-05-07_V1_1_7.md  CODEX_HANDOFF_2026-05-08_GITHUB_DEV.md  CODEX_HANDOFF_2026-05-21_AMBER_AGENT_CONTINUATION.md  CODEX_HANDOFF_2026-05-30_STREAMING_REVEAL_RECOVERY.md  CODEX_HANDOFF_2026-06-11_RISK_AUDIT_THIRD_BATCH.md  CODEX_M3_RESTRAINED_UI_PROTOTYPE_2026-05-05.html  CODEX_NOTION_WORKSPACE_UI_PROTOTYPE_2026-05-05.html  CODEX_TIMELINE_UI_REDESIGN_HANDOFF_2026-05-05.md  M1.7_TTS_EVAL.md  REFACTOR_P2_CHATLIST_PRECUT_2026-05-19.md  REFACTOR_P2_CHATMESSAGETOOLS_PRECUT_2026-05-19.md  REFACTOR_P2_CHATMESSAGE_PRECUT_2026-05-19.md  REFACTOR_P2_SETTING_EXP_PRECUT_2026-05-18.md  REFACTOR_P2_SETTING_PROVIDER_DETAIL_PRECUT_2026-05-19.md  REFACTOR_P2_SETTING_SEARCH_PRECUT_2026-05-18.md  REFACTOR_PHASE2_KICKOFF_2026-05-18.md  REFACTOR_PLAN_AGENT_KERNEL.md  REFACTOR_PLAN_AGENT_KERNEL_v2.md  REFACTOR_PLAYBOOK.md  REVIEW_DEEP_READ_OPTIMIZATION_PLAN.md  REVIEW_DEEP_READ_OPTIMIZATION_PLAN_V2.md  REVIEW_DEEP_READ_OPTIMIZATION_PLAN_V3.md  RUST_NATIVE_ABANDONED_COMPONENTS.md  RUST_NATIVE_SPIKE_PLAN.md  SESSION_5_HANDOFF.md  SESSION_SNAPSHOT_2026-05-15-EVENING.md  SESSION_SNAPSHOT_2026-05-15-NIGHT.md  SESSION_SNAPSHOT_2026-05-15-PM.md  SESSION_SNAPSHOT_2026-05-17-PHASE1-PARTIAL.md  V3_HANDOFF_SESSION_2_2026-05-23.md  V3_HANDOFF_SESSION_3_2026-05-24.md  (+27 more)
docs/adr/: 0001-legacy-frozen-surfaces.md  0002-agent-kernel-interface-design.md  0003-uniffi-vs-hand-written-jni.md  0004-hard-gate-native-crate-template.md  0006-brand-rebrand-complete.md
docs/brand/: README.md
docs/cloud-design/amberagent/: README.md
docs/discussions/: 2026-06-05-memory-dreaming-triad-review.md
docs/eval/: memory-recall-fixtures.md
docs/perf-baseline/2026-05-15/: README.md  cold-start.md
docs/plans/: 2026-06-04-search-image-inline-layout.md  2026-06-05-memory-openai-dreaming-implementation.md
docs/superpowers/plans/: 2026-06-07-amber-design-system-graphite.md  2026-06-08-streaming-reveal-decouple.md  2026-06-10-live-companion-engine.md  2026-06-11-live-companion-bubble.md
docs/superpowers/specs/: 2026-06-10-live-companion-redesign-design.md
document/: build.gradle.kts
feature/board/impl/: build.gradle.kts
feature/deepread/api/: build.gradle.kts
feature/history/: build.gradle.kts
feature/icloud/: build.gradle.kts
feature/live/api/: build.gradle.kts
feature/modelcouncil/: build.gradle.kts
feature/modelcouncil/api/: build.gradle.kts
feature/office/api/: build.gradle.kts
feature/runtime/api/: build.gradle.kts
feature/subagent/: build.gradle.kts
feature/subagent/api/: build.gradle.kts
feature/system/: build.gradle.kts
feature/task/: build.gradle.kts
feature/terminal/: build.gradle.kts
feature/tools/access/: build.gradle.kts
feature/tools/api/: build.gradle.kts
feature/workspace/: build.gradle.kts
gradle/: libs.versions.toml
highlight/: build.gradle.kts
native/: .gitignore  Cargo.toml  README.md
native/generative-widget-parser/: ABANDONED.md  Cargo.toml
native/generative-widget-parser/src/: lib.rs  parser.rs
native/highlight-parser/: Cargo.toml
native/highlight-parser/src/: grammars.rs  lib.rs  packed_tokens.rs  scope_mapping.rs
native/html-diff-normalizer/: Cargo.toml
native/html-diff-normalizer/src/: lib.rs
native/jni-common/: Cargo.toml
native/jni-common/src/: lib.rs
native/json-expr/: Cargo.toml
native/json-expr/src/: lib.rs
native/markdown-parser/: Cargo.toml  regen-corpus.sh
native/markdown-parser/src/: lib.rs  packed_ast.rs  tree_builder.rs  type_mapping.rs
native/markdown-preprocess/: Cargo.toml
native/markdown-preprocess/src/: lib.rs
native/office-parsers/: Cargo.toml
native/office-parsers/src/: docx.rs  epub.rs  error.rs  lib.rs  pptx.rs  xlsx.rs
native/reader-extractor/: Cargo.toml
native/reader-extractor/src/: lib.rs
native/regex-transformer/: Cargo.toml
native/regex-transformer/src/: lib.rs
native/sync-crypto/: Cargo.toml
native/sync-crypto/src/: lib.rs
native/tokenizer/: Cargo.toml
native/tokenizer/src/: lib.rs
scripts/: amberagent_auto_jank.sh
search/: build.gradle.kts
tts/: build.gradle.kts
web/: build.gradle.kts
web-ui/: CLAUDE.md  package.json
(+2356 files in other folders)
