[package]
name = "generative-widget-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "generative_widget_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
android_logger.workspace = true
