[package]
name = "html-diff-normalizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "html_diff_normalizer"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
jni-common.workspace = true
regex.workspace = true
log.workspace = true
scraper.workspace = true
ego-tree = "0.10"
