[package]
name = "json-expr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "json_expr"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
jni-common.workspace = true
thiserror.workspace = true
log.workspace = true
serde_json = "1"
